--- a/ARIAR_PayrollSystem/ARIAR_PayrollSystem.csproj
+++ b/ARIAR_PayrollSystem/ARIAR_PayrollSystem.csproj
@@ -32,7 +32,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ARIAR_PayrollSystem.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Guna.UI2, Version=2.0.4.4, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
+      <HintPath>..\packages\Guna.UI2.WinForms.2.0.4.4\lib\net48\Guna.UI2.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ReportViewer.Common.10.0.40219.1\lib\Microsoft.ReportViewer.Common.dll</HintPath>
     </Reference>
@@ -47,9 +53,11 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -70,32 +78,83 @@
     <Compile Include="Forms\BiometricAttendance.Designer.cs">
       <DependentUpon>BiometricAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ChildrenForm\EmployeeDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ChildrenForm\EmployeeDetails.Designer.cs">
+      <DependentUpon>EmployeeDetails.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EmployeeInformation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EmployeeInformation.Designer.cs">
+      <DependentUpon>EmployeeInformation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Maintenance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Maintenance.Designer.cs">
+      <DependentUpon>Maintenance.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Test.Designer.cs">
+      <DependentUpon>Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\SidebarHelper.cs" />
     <Compile Include="Helpers\Switcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\SearchBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\SearchBar.Designer.cs">
+      <DependentUpon>SearchBar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\BiometricAttendance.resx">
       <DependentUpon>BiometricAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ChildrenForm\EmployeeDetails.resx">
+      <DependentUpon>EmployeeDetails.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EmployeeInformation.resx">
+      <DependentUpon>EmployeeInformation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Maintenance.resx">
+      <DependentUpon>Maintenance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Test.resx">
+      <DependentUpon>Test.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
+    <EmbeddedResource Include="UserControls\SearchBar.resx">
+      <DependentUpon>SearchBar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -114,34 +173,60 @@
     <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="Tests\" />
-    <Folder Include="UserControls\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\menu_logo.png" />
+    <None Include="Resources\menu_logo1.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\New Project %285%29.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\group_logo4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fingerprint_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\schedule_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\calculate_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\description_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logout_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\arrow_right_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Resources\group_logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\fingerprint_logo.png" />
+    <None Include="Resources\cancel_logo1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\calculate_logo.png" />
+    <None Include="Resources\task_check_logo1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\description_logo.png" />
+    <None Include="Resources\location_away_logo1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\schedule_logo.png" />
+    <None Include="Resources\right_arrow_dark_logo.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logout_logo.png" />
+    <None Include="Resources\CHECK_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CLOSE_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Untitled design %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search1_logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
