--- a/ARIAR_PayrollSystem/packages.config
+++ b/ARIAR_PayrollSystem/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net48" />
 </packages>
