--- a/ARIAR_PayrollSystem/ARIAR_PayrollSystem.csproj
+++ b/ARIAR_PayrollSystem/ARIAR_PayrollSystem.csproj
@@ -114,6 +114,12 @@
     <Compile Include="Forms\SplashScreen.Designer.cs">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SystemMaintenance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SystemMaintenance.Designer.cs">
+      <DependentUpon>SystemMaintenance.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Test.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,12 +128,19 @@
     </Compile>
     <Compile Include="Helpers\SidebarHelper.cs" />
     <Compile Include="Helpers\Switcher.cs" />
+    <Compile Include="Helpers\TabcontrolHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\CustomTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\CustomTextBox.Designer.cs">
+      <DependentUpon>CustomTextBox.cs</DependentUpon>
     </Compile>
     <Compile Include="UserControls\SearchBar.cs">
       <SubType>UserControl</SubType>
@@ -153,6 +166,9 @@
     <EmbeddedResource Include="Forms\SplashScreen.resx">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SystemMaintenance.resx">
+      <DependentUpon>SystemMaintenance.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Test.resx">
       <DependentUpon>Test.cs</DependentUpon>
     </EmbeddedResource>
@@ -160,6 +176,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\CustomTextBox.resx">
+      <DependentUpon>CustomTextBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserControls\SearchBar.resx">
       <DependentUpon>SearchBar.cs</DependentUpon>
@@ -245,6 +264,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\search_logo_big.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\config_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\config_logo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\config_logo2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\database_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_logo_dark.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\person_logo_large.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
