--- a/ARIAR_PayrollSystem/packages.config
+++ b/ARIAR_PayrollSystem/packages.config
@@ -3,4 +3,5 @@
   <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
